err/pyriem.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/bernhard'...
Listing './lib/python3.5/site-packages/bernhard-0.2.6.egg-info'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pyriem'...
Listing './lib/python3.5/site-packages/pyriem/plugins'...
Compiling './lib/python3.5/site-packages/pyriem/plugins/apache2.py'...
***   File "./lib/python3.5/site-packages/pyriem/plugins/apache2.py", line 4
    print "Requirement: 'time' module not found."
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyriem/plugins/disk.py'...
***   File "./lib/python3.5/site-packages/pyriem/plugins/disk.py", line 4
    print "Module 'psutil' required"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyriem/plugins/load.py'...
***   File "./lib/python3.5/site-packages/pyriem/plugins/load.py", line 4
    print "Requirement: 'time' module not found."
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyriem/plugins/memcache.py'...
***   File "./lib/python3.5/site-packages/pyriem/plugins/memcache.py", line 4
    print "Requirement: 're' module not found."
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyriem/plugins/memory.py'...
***   File "./lib/python3.5/site-packages/pyriem/plugins/memory.py", line 4
    print "Module 'psutil' required"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyriem/plugins/mysql.py'...
***   File "./lib/python3.5/site-packages/pyriem/plugins/mysql.py", line 4
    print "Requirement: 'time' module not found."
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyriem/plugins/network.py'...
***   File "./lib/python3.5/site-packages/pyriem/plugins/network.py", line 4
    print "Module 'psutil' required"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyriem/plugins/varnish.py'...
***   File "./lib/python3.5/site-packages/pyriem/plugins/varnish.py", line 4
    print "Requirement: 'time' module not found."
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyriem/pyriem.py'...
***   File "./lib/python3.5/site-packages/pyriem/pyriem.py", line 69
    print item
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyriem-0.1.28.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
